force-app/main/default/objects/Sales_Order_Dashboard__c/Sales_Order_Dashboard__c.object-meta.xml
<CustomObject>
    <label>Sales Order Dashboard</label>
    <nameField>
        <label>Sales Order Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>