force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>