force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Billing_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_Due__c</fullName>
    <label>Billing Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>