force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Billing_Balances__c.field-meta.xml
<CustomField>
    <fullName>Billing_Balances__c</fullName>
    <label>Billing Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>