force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Billing_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>Billing_Days_Due__c</fullName>
    <label>Billing Days Due</label>
    <length>155</length>
    <type>Text</type>
</CustomField>