force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Commissions_Balance__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Balance__c</fullName>
    <label>Commissions Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>