force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Commissions_Unpaid_New__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Unpaid_New__c</fullName>
    <label>Commissions Unpaid New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>