force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Contact)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>