force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Credit_Card_Fee_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Fee_Sales_Order__c</fullName>
    <label>Credit Card Fee (Sales Order)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>