force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Customer)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>