force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Customer_s_ETA__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_ETA__c</fullName>
    <label>Customer&apos;s ETA</label>
    <type>Date</type>
</CustomField>