force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>