force-app/main/default/objects/Sales_Order_Dashboard__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>