force-app/main/default/objects/Sales_Order_Dashboard__c/fields/GL_Address__c.field-meta.xml
<CustomField>
    <fullName>GL_Address__c</fullName>
    <label>GL Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>