force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Import_Information__c.field-meta.xml
<CustomField>
    <fullName>Import_Information__c</fullName>
    <label>Import Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>