force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Inserting_Month__c.field-meta.xml
<CustomField>
    <fullName>Inserting_Month__c</fullName>
    <formula>TEXT(MONTH(Inserting_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inserting Month</label>
    <type>Text</type>
</CustomField>