force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Inserting_Year__c.field-meta.xml
<CustomField>
    <fullName>Inserting_Year__c</fullName>
    <formula>TEXT(YEAR(Inserting_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inserting Year</label>
    <type>Text</type>
</CustomField>