force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>