force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>