force-app/main/default/objects/Sales_Order_Dashboard__c/fields/OtherAmountIsGreaterThanTotal__c.field-meta.xml
<CustomField>
    <fullName>OtherAmountIsGreaterThanTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OtherAmountIsGreaterThanTotal</label>
    <type>Checkbox</type>
</CustomField>