force-app/main/default/objects/Sales_Order_Dashboard__c/fields/PO_Count__c.field-meta.xml
<CustomField>
    <fullName>PO_Count__c</fullName>
    <label>PO Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>