force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>