force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Referral_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Order_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>