force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Returned_Order__c.field-meta.xml
<CustomField>
    <fullName>Returned_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned Order</label>
    <type>Checkbox</type>
</CustomField>