force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Sales_Order_Format__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Format</label>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Sales Order Dashboards</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>