force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Sales_Rep_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Shadow</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Sales Rep Shadow)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards1</relationshipName>
    <type>Lookup</type>
</CustomField>