force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Salesrep_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Salesrep_Is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesrep_Is_Owner</label>
    <type>Checkbox</type>
</CustomField>