force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Shipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Count__c</fullName>
    <label>Shipment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>