force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Shipping Account)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards3</relationshipName>
    <type>Lookup</type>
</CustomField>