force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Shipping Name)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards2</relationshipName>
    <type>Lookup</type>
</CustomField>