force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Specified_Rep__c.field-meta.xml
<CustomField>
    <fullName>Specified_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specified Rep</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Dashboards (Specified Rep)</relationshipLabel>
    <relationshipName>Sales_Order_Dashboards4</relationshipName>
    <type>Lookup</type>
</CustomField>