force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Sum_of_Bills__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Bills__c</fullName>
    <label>Sum of Bills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>