force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Amount__c</fullName>
    <label>Total Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>