force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Memo__c</fullName>
    <label>Total Credit Memo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>