force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Product_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Received__c</fullName>
    <label>Total Product Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>