force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Products_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_Quantity__c</fullName>
    <label>Total Products Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>