force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Shipped__c</fullName>
    <label>Total Quantity Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>