force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Tax__c</fullName>
    <label>Total Sales Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>