force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Total_With_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Fee__c</fullName>
    <label>Total With Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>