force-app/main/default/objects/Sales_Order_Dashboard__c/fields/Visible_in_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in Dashboard</label>
    <type>Checkbox</type>
</CustomField>